1、重新使用 httpClient 实现 Utils 类中的 Http Get 方法； 2、使用 fastjson 包解析 json